<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>fun.fengwk.convention4j</groupId>
        <artifactId>convention4j-parent</artifactId>
        <version>1.2.1</version>
    </parent>

    <groupId>fun.fengwk.kk-studio</groupId>
    <artifactId>kk-studio-parent</artifactId>
    <version>1.0.0</version>
    <packaging>pom</packaging>

    <modules>
        <module>share</module>
        <module>core</module>
        <module>web</module>
        <module>agent</module>
        <module>daemon</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
        <kk-studio.version>1.0.0</kk-studio.version>
        <gateway.version>1.0.8</gateway.version>
        <aws.sdk.version>2.29.52</aws.sdk.version>
        <langchain4j.version>1.16.2</langchain4j.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-share</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-agent</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-daemon</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-core</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.kk-studio</groupId>
                <artifactId>kk-studio-web</artifactId>
                <version>${kk-studio.version}</version>
            </dependency>
            <dependency>
                <groupId>fun.fengwk.gateway</groupId>
                <artifactId>gateway-share</artifactId>
                <version>${gateway.version}</version>
            </dependency>
            <dependency>
                <groupId>software.amazon.awssdk</groupId>
                <artifactId>bom</artifactId>
                <version>${aws.sdk.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>dev.langchain4j</groupId>
                <artifactId>langchain4j-bom</artifactId>
                <version>${langchain4j.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

<build>
    <pluginManagement>
        <plugins>
            <plugin>
                <groupId>com.diffplug.spotless</groupId>
                <artifactId>spotless-maven-plugin</artifactId>
                <version>2.43.0</version>
                <configuration>
                    <!--
                        ratchetFrom 让 spotless 只格式化相对 origin/master 改动的文件，
                        避免一上来格式化全仓库（保持历史 commit 的可读性）。
                        之后所有改动的文件按 GJF 统一格式。
                    -->
                    <ratchetFrom>origin/master</ratchetFrom>
                    <java>
                        <googleJavaFormat>
                            <version>1.18.0</version>
                            <style>GOOGLE</style>
                        </googleJavaFormat>
                        <removeUnusedImports/>
                        <importOrder>
                            <order>\#,,fun.fengwk.kkstudio,javax,java</order>
                        </importOrder>
                    </java>
                </configuration>
                <executions>
                    <execution>
                        <id>spotless-check</id>
                        <phase>validate</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </pluginManagement>
    <plugins>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-checkstyle-plugin</artifactId>
            <version>3.3.0</version>
            <configuration>
                <configLocation>${maven.multiModuleProjectDirectory}/checkstyle.xml</configLocation>
                <includeTestSourceDirectory>true</includeTestSourceDirectory>
                <consoleOutput>true</consoleOutput>
                <failsOnError>true</failsOnError>
            </configuration>
            <executions>
                <execution>
                    <id>checkstyle-validate</id>
                    <phase>validate</phase>
                    <goals>
                        <goal>check</goal>
                    </goals>
                </execution>
            </executions>
        </plugin>
    </plugins>
</build>
</project>
